add post handler and routes
